# Barn2ROS

./: README.md  Vagrantfile  ball_finder_node.cpp.BAK  deploy.sh  frames.gv  setup.sh
.oldgit/: ORIG_HEAD  config  index  packed-refs
.oldgit/logs/: HEAD
.oldgit/objects/pack/: pack-a6805886b3437f804601163eff44324d1f3672fb.idx  pack-a6805886b3437f804601163eff44324d1f3672fb.pack
.oldgit/refs/heads/: release
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/autonomous_commands/: AlignWithBallAction.h  AlignWithBallActionFeedback.h  AlignWithBallActionGoal.h  AlignWithBallActionResult.h  AlignWithBallFeedback.h  (+23 more)
src/: robot.launch  rviz.rviz
src/autonomous_commands/: CMakeLists.txt  package.xml
src/ball_finder/: CMakeLists.txt  package.xml
src/cheesy_drive/: CMakeLists.txt  package.xml
src/drivetrain_converter/: CMakeLists.txt  package.xml
src/husky_navigation/: package.xml
src/laser_scan_combiner/: CMakeLists.txt  package.xml
src/launch/: goal.launch  package.xml
src/roborio_comms/: CMakeLists.txt  package.xml
src/robot_control/: CHANGELOG.rst  CMakeLists.txt  README.md
src/robot_control/robot_control/: CMakeLists.txt  package.xml
src/robot_control/robot_control/include/robot_control/: robot_hw_interface.h
src/robot_control/robot_control/launch/: robot_hardware.launch  robot_simulation.launch  robot_test_trajectory.launch  robot_visualize.launch
src/robot_control/robot_control/src/: robot_hw_interface.cpp  robot_hw_main.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_gazebo/: package.xml
(+167 files in other folders)
